Primer commit quiz_2017

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,11 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por LeChuck.
+    Esta práctica ha sido desarrollada por César Valencia Blancas y Nacho Collado del Ser.
+</p>
+<p>
+    Nuestro repositorio será https://github.com/Widou/quiz_2017.
 </p>
 
-<img src="/images/lechuck.jpg" />
+<img src="https://cesarvalencia.neocities.org/Practica1/descarga.jpg" />
 
